--- a/src/main/resources/templates/members/MemberList.html
+++ b/src/main/resources/templates/members/MemberList.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://thymeleaf.org">
 <body>
 
 <div class="container">
