[FIX] createMemberForm.html

--- a/src/main/resources/templates/members/createMemberForm.html
+++ b/src/main/resources/templates/members/createMemberForm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="www.http://thymeleaf.org">
 <body>
 
 <div class="container">
@@ -11,6 +11,8 @@
         </div>
         <button type="submit">등록</button>
     </form>
-</div> <!-- /container -->
+
+</div>
+
 </body>
 </html>
